--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.07.2022 14:19:15</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.07.2022 14:57:04</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -113,7 +113,7 @@ pomerančový gin / tonic / pomeranč / led</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy pstruh se salsou z rajcat a okurek, smazena zeleninova ryze, salatek 149</li><li>Peceny cerstvy platyz se salsou z rajcat a okurek, smazena zeleninova ryze, salatek 179</li><li>Kruti nudlicky s krupavou cibulkou, arasidy, zelenym koriandrem a spetkou chilli, ryzove nudle, kedlubnove cukemono 149</li><li>Grilovane medailonky z hoveziho rumpsteaku {US angus} s peprovou omackou, pecene brambory, pecena mlada cervena repa {L} 185</li><li>Indicka korma s kvetakem, cuketami, cizrnou a kokosovym mlekem, jasminova ryze 149</li></ol>
+None
 </td>
 </tr>
 </table>
