--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.07.2022 08:45:17</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.07.2022 09:10:58</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -61,7 +61,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s omackou z pecenych paprik a lilku, korenena ryze, salatek 149</li><li>Peceny filet z cerstveho norskeho lososa s kaparovo-citronovym dresinkem, irsky colcannon {stouchane brambory s kapustou a zelenou cibulkou}, salatek 179</li><li>Burrito s krutimi nudlickami a ratatouille z pecene zeleniny, jogurtovy dip, korenena ryze, salatek {L} 149</li><li>Grilovane medailonky z irskeho hoveziho krku {chuck roll} s houbovou omackou, pecene nove brambory, salatek 185</li><li>Zapecene zampiony plnene ovcim syrem se susenymi rajcaty a cibulkou, irsky colcannon {stouchane brambory s kapustou a zelenou cibulkou}, salatek 149</li></ol>
+<ol><li>Cerstvy filet z atlanticke makrely, pecene brambory, koprovo -jogurtovy dip, citron, salatek  149</li><li>Cerstvy filet z morana a vlka, pecene brambory, koprovo-jogurtovy dip, citron, salatek  179</li><li>Indicka kruti korma s barevnym kvetakem, zelenymi fazolkami a orechy. Jasminova ryze 149</li><li>Bramborové gnocchi s pecenou letni zeleninou, sazene vejce ,salatek 149 L</li></ol>
 </td>
 </tr>
 </table>
