Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.07.2022 08:47:15</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.07.2022 09:11:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,7 +7,42 @@
 <h5>Pondělí, 11. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>V OBDOBÍ 27.6. - 10.7. MÁME DOVOLENOU. Budeme se na Vás těšit, odpočatí a plní elánu 11.7.</strong>
+<strong>Smetanová česneková s krutony</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Rajská hovězí pečeně s houskovým knedlíkem nebo těstovinou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							145,-
+						</span>
+</p>
+<p>
+<strong>Linguiny se smetanovou omáčkou, restovanou slaninou a sýrem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							133,-
+						</span>
+</p>
+<p>
+<strong>Teplý bufet: kolínko, asijský tuňák, pečené brambory, kus kus, zelenina</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							49,-
+						</span>
+</p>
+<p>
+<strong>Salátový bufet: okurkový, míchaná zelenina, tlačenkový</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							45,-
+						</span>
+</p>
+<p>
+<strong>Dresinky: jogurtový s česnekem, balsamico, paprikový</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							0,-
@@ -107,7 +142,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Cerstvy filet z atlanticke makrely, pecene brambory, koprovo -jogurtovy dip, citron, salatek  149</li><li>Cerstvy filet z morana a vlka, pecene brambory, koprovo-jogurtovy dip, citron, salatek  179</li><li>Indicka kruti korma s barevnym kvetakem, zelenymi fazolkami a orechy. Jasminova ryze 149</li><li>Bramborové gnocchi s pecenou letni zeleninou, sazene vejce ,salatek 149 L</li></ol>
+<ol><li>Peceny filet cerstveho jihoceskeho kapra {prorezavany-bez kosti] s pecenymi rajcaty a petrzelkovym pestem, kari ze zeleneho hrachu s cuketami a zazvorem, salatek 149</li><li>Peceny filet z cerstveho norskeho lososa s pecenymi rajcaty a petrzelkovym pestem, kari ze zeleneho hrachu s cuketami a zazvorem, salatek 179</li><li>Pad kra pao – thajske opekane veprove s bazalkou, zelenymi fazolkami, limetkami a sazenym vejcem, jasminova ryze, salatek 149</li><li>Spagety s nudlickami hoveziho orechu se susenymi rajcaty, pecenou kapustou, petrzelkovym pestem a zralou goudou {L} 179</li><li>Burrito s pikantnim fazolovym chilli s pecenymi palivymi paprikami a   chipotle, pecene brambory, jogurtovy dip, salatek {L} 149</li></ol>
 </td>
 </tr>
 </table>
