Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.07.2022 15:11:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.07.2022 07:37:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 14. 07. 2022</h5>
+<h5>Pátek, 15. 07. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar se zeleninou a nudlemi</strong>
@@ -50,59 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 14.7.2022</div>
+<div class="nadpis">Pátek 15.7.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Snickers roláda </div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Moravské kynuté koláče s tvarohem a rybízem</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Višňový dort </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Malinový jogurt</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Boršč se zakysanou smetanou; v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Boršč se zakysanou smetanou; samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Roastbeef, pečené batáty, polníček, křenové aioli <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">169 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Indické butter chicken, basmati rýže, koriandr, sezam <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Koprová omáčka, vařené vejce, máslové brambory, pažitka, bylinková strouhanka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -113,13 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kyselica s houbami a míchanými vejci</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špenátový krém s vejci</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Vepřový katův šleh s cibulí a feferonkou, smažené hranolky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hamburská vepřová kýta, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo, uzená rolovaná plec, volské oko, kyselá okurka, škvarky s cibulí</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Restovaná kuřecí játra s kukuřicí, paprikou a červenou cibulí, vařené nové brambory s máslem a šnitlíkem</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečené vepřové karé na zelených fazolkách se slaninou, sázené vejce, grilované rajče</td><td class="menuPrice">158,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažená kuřecí kapsa plněná šunkou a sýrem, vařené nové brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">154,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou, jemná houbová omáčka, restované špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený caesar dresinkem, řezy z kuřecích prsou, opečená slanina, krutóny, parmazán</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar 0,4L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">33,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Steak z vepřové pečeně se šunkou gratinovaný sýrem, smažené bramborové plátky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Restovaná drůbeží játra s červenou cibulí, kukuřicí a šunkou, pečené brambory s kmínem</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Do růžova pečená vepřová panenka, květákové pyré s máslem a sýrem, volské oko, grilovaná paprika</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z kuřecích prsou, jemná sýrová omáčka, smažené hranolky, grilovaná paprika</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, grilované brambory s kmínem, cibule, beraní roh, křen</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Zeleninový salát promíchaný mexickým dresinkem, smažený sýr</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený sýr a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar 0,4L se slevou 11,-Kč na pivu pro naše stálé sledující po celý den neomezeně</td><td class="menuPrice">33,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštek 10° - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštek 10° - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Černá Barbora 13° - pivovar Ostravar</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Glorion IPA ze spilky 4,9% - pivovar Ostravar</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -127,71 +77,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">0,4 l</td>
-<td class="title">Gazpacho – studená zeleninová polévka s bazalkou ricottou a krutony 1a,3,7,9</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Grilovaný krevetový špíz s variací trhaných salátů, cherry rajčaty, mrkví,
-opečeným citronem a bagetou 1a,3,4,7,12</td>
-<td class="pricem">189 Kč</td>
-</tr>
-<tr>
-<td class="amount">300 g</td>
-<td class="title">Vepřová kotleta Tomahawk s omáčkou chimichirri, grilovanou kukuřicí
-a pečenou bramborou s česnekovým zákysem 1a,7,12</td>
-<td class="pricem">285 Kč</td>
-</tr>
-<tr>
-<td class="amount">400 g</td>
-<td class="title">Panzanella s mozzarellou - salát z čerstvé zeleniny, řapíkatého celeru, bazalky a mozzarelly
-s olivovým olejem extra virgin 1ab,7,9,12</td>
-<td class="pricem">195 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Grilovaný ananas s limetkovým sorbetem a slanou karamelovou omáčkou 7</td>
-<td class="pricem">99 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="title">Gin Tonic Okurkový<br/>
-gin / tonic / čerstvá okurka / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic PINK<br/>
-malinový gin / tonic  / lesní plody / ovoce / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Zázvorový / Ginger<br/>
-gin / zázvorový tonic / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Targa Florio<br/>
-gin / citronová limonáda / citron / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-<tr>
-<td class="title">Gin Tonic Pomerančový / Orange<br/>
-pomerančový gin / tonic / pomeranč / led</td>
-<td class="pricem">109 Kč</td>
-</tr>
-</tbody>
-</table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Karotkový krém se zázvorem a krutony 1a,3,7,9</td><td class="pricem">43 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí nudličky na kari se žampiony a pórkem s jasmínovou rýží 1a,6</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">200g</td><td class="title">Smažený květák s vařenými brambory s pažitkou a naší tatarskou omáčkou 1a,3,7,10</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">3ks</td><td class="title">Naše kynuté meruňkové knedlíky s tvarohem, cukrem a máslem 1a,3,7</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
@@ -199,7 +85,7 @@ pomerančový gin / tonic / pomeranč / led</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske massaman kari s kousky rybich filetu, lilky, zeleninou, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Spagety s kousky chobotnice, krevetami, cerstvymi rajcaty a bazalkovo-orechovym pestem 179</li><li>Nam tok – thajsky steakovy salat s limetkami, matou, chilli a salotkou, ryzove nudle, salatek 149</li><li>Smazene rizecky z krutich prsou a veprove panenky, stouchane brambory s kapustou, okurkovy salatek, citron {L} 179</li><li>Kapustove placicky s petrzelkou a muskatem, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou {L} 149</li></ol>
+<ol><li>Thajske massaman kari s kousky rybich filetu, lilky, zeleninou, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Spagety s kousky chobotnice, krevetami, cerstvymi rajcaty a bazalkovo-orechovym pestem (L) 179</li><li>Nam tok – thajsky steakovy salat s limetkami, matou, chilli a salotkou, ryzove nudle, salatek 149</li><li>Smazene rizecky z krutich prsou a veprove panenky, stouchane brambory s kapustou, okurkovy salatek, citron {L} 179</li><li>Kapustove placicky s petrzelkou a muskatem, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou {L} 149</li></ol>
 </td>
 </tr>
 </table>
