Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.07.2022 08:45:02</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.07.2022 09:11:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -67,6 +67,11 @@
 <div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Ovocný dort s krémem z bílé čokolády</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Cizrnová polévka s rajčaty a římským kmínem; v menu <em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
@@ -120,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske massaman kari s kousky rybich filetu, lilky, zeleninou, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Spagety s kousky chobotnice, krevetami, cerstvymi rajcaty a bazalkovo-orechovym pestem (L) 179</li><li>Nam tok – thajsky steakovy salat s limetkami, matou, chilli a salotkou, ryzove nudle, salatek 149</li><li>Smazene rizecky z krutich prsou a veprove panenky, stouchane brambory s kapustou, okurkovy salatek, citron {L} 179</li><li>Kapustove placicky s petrzelkou a muskatem, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou {L} 149</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se salsou z cerstvych rajcat s okurkami a cervenou cibuli, frijoles refritos {mexicke stouchane fazole}, salatek 149</li><li>Peceny filet z cerstveho halibuta se salsou z cerstvych rajcat s okurkami a cervenou cibuli, frijoles refritos, salatek 175</li><li>Opekane kruti kousky v omacce teryiaki s prazenym sezamem, jasminova ryze, cukemono z cuket s paprikami 149</li><li>Pikantni jeleni paprikas s palivymi slovenskymi paprikami a rajcaty, bramborove placky {L} 175</li><li>Smazena pakora {cizrnove smazenky} s mladou cervenou repou a brokolici, jogurtovy dip, jahly, salatek 149</li></ol>
 </td>
 </tr>
 </table>
