Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.07.2022 08:45:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.07.2022 09:11:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -35,14 +35,14 @@
 						</span>
 </p>
 <p>
-<strong>Teplý bufet: Ryba se slaninou, prirodni Vepřový plátek, rýže, Mrkvička, brambory</strong>
+<strong>TEPLÝ BUFET: asijská kuřecí prsa, zapečená treska, brambory, baby mrkev, rýže</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: rajčatový, cizrnový s dresinkem ze sušených rajcat, zeleninový kuskus</strong>
+<strong>SALÁTY: rajčatový s vejcem, šopák, kuskus se zeleninou a ředkvičkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
@@ -77,6 +77,11 @@
 <li class="poznamka">
 <div class="polozka">Bavorská bageta s kuřecím masem a dijonskou hořčicí</div>
 <div class="cena">89 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Pavlova roláda  (bez lepku) </div>
+<div class="cena">55 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
